--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Hex School</title>
     <link rel="shortcut icon" href="https://www.hexschool.com/favicon.ico">
     <link rel="stylesheet" href="css/index.min.css">
 </head>
