--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hex school</title>
     <link rel="shortcut icon" href="https://www.hexschool.com/favicon.ico">
+    <meta name='description' content='六角學院讓您奠定良好的前端基礎' />
+
+    <meta property="og:title" content="Hex school" />
+    <meta property="og:description" content="六角學院讓您奠定良好的前端基礎">
+    <meta property="og:type" content="website" />
+
+    <link href="https://www.hexschool.com/favicon.ico" rel="apple-touch-icon" />
+
     <link rel="stylesheet" href="css/index.min.css">
 </head>
 <body>
@@ -132,7 +140,7 @@
         <div class="connect">
             <h2>對我們課程有興趣嗎？<br>歡迎留下您的資料</h2>
             <form action="index.html">
-                <textarea name="content" id="content" cols="30" rows="10" placeholder="我的想法......"></textarea>
+                <textarea name="content" id="content" placeholder="我的想法......"></textarea>
                 <div class="connect-data">
                     <div class="user">
                         <label for="name">姓名</label>
@@ -140,13 +148,16 @@
                     </div>
                     <div class="user">
                         <label for="number">電話</label>
-                        <input type="text" id="number" name="Name" placeholder="0912345678">
+                        <input type="tel" id="number" name="Name" placeholder="0912345678">
                     </div>
                     <div class="user">
                         <label for="mail">信箱</label>
-                        <input type="text" id="mail" name="Name" placeholder="hexschool@gmail.com">
+                        <input type="email" id="mail" name="Name" placeholder="hexschool@gmail.com">
                     </div>
-                    <input type="submit" value="送出" class="submitbtn">
+                    <div class="submitbtn">
+                        <input type="submit" value="送出" class="">
+                    </div>
+
                 </div>
             </form>    
         </div>
@@ -155,7 +166,7 @@
             <ul>
                 <li>
                     聯絡我們：
-                    <a href="hexschool@gmail.com">
+                    <a href="mailto:hexschool@gmail.com?subject=Hex school%20使用者意見回饋&body=您好,%0A我在使用 Hex school 有些疑問，請協助處理～ %0A%0A謝謝"">
                         hexschool@gmail.com
                     </a>
                 </li>
